<resources>
    <string name="app_name">To Be or to Have</string>
    <string name="home">Home</string>
    <string name="stock">Stock</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="card_view_image">card view image</string>
    <string name="staff">Staff</string>
    <string name="command">Command</string>
    <string name="statistic">Statistic</string>
    <string name="dashboard">Dashboard</string>
    <string name="weather">Weather</string>
    <string name="traffic">Traffic</string>
    <string name="out_of_stock">Out of stock</string>
    <string name="temperature">Temperature</string>
    <string name="condition">Condition</string>
    <string name="location">Location</string>

    <string name="day">Day</string>
    <string name="high">High</string>
    <string name="low">Low</string>

    <string name="powered_by_yahoo">powered by Yahoo!</string>
    <string name="condition_icon">Condition Icon</string>
    <string name="loading">Loading&#8230;</string>
    <string name="update_location">Update Location</string>
    <string name="cache_exception">No Cached Weather Data</string>
    <string name="location_permission_needed">Device location is needed for Weather GeoLocation</string>
    <string name="disable_geolocation">Change Settings</string>
    <string name="delivery">Delivery</string>
    <string name="temp_unit">°C</string>
    <string name="temperature_format">%1$d%2$s</string>
    <string name="name">Name</string>
    <string name="photo_url">Url of the item</string>
    <string name="create_a_new_article">Create a new article</string>
    <string name="valid">Valid</string>
    <string name="cancel">Cancel</string>
    <string name="item_image">Item image</string>
    <string name="default_item_title">Item not found</string>
    <string name="default_item_category">Unknown category</string>
    <string name="item_description">description</string>
    <string name="item_available">Out of stock</string>
    <string name="item_price">0€</string>
    <string name="edit">Edit</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="category">Category</string>
    <string name="available">Available</string>
    <string name="to_euro">%s €</string>
    <string name="format_available">%d available</string>
    <string name="photo">photo</string>
    <string name="request">Request</string>
    <string name="horraire_close">Horraire : close</string>
    <string name="opening_time">Opening time</string>
    <string name="closing_time">Closing time</string>
    <string name="close_format">Closing time : %s</string>
    <string name="open_format">Opening time : %s</string>
    <string name="default_staff_name">Person not found</string>
    <string name="unknown_job">Unknown job</string>
    <string name="timesheet">Timesheet</string>
    <string name="out_of_stock_title">Out of Stock !</string>
    <string name="items_out_of_stock">Items out of stock</string>
    <string name="out_of_stock_format">%d item out of stock</string>
    <string name="client">Client</string>
    <string name="date">Date</string>
    <string name="status">Items</string>

</resources>
