<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"

    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="2dp"
    app:cardElevation="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/photo"
            android:layout_width="240dp"
            android:layout_height="240dp"
            android:contentDescription="@string/card_view_image"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_sync_problem_black_24dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:background="@color/item_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="?android:selectableItemBackground"
                    android:fontFamily="sans-serif"
                    android:padding="20dp"
                    android:text="@string/default_staff_name"
                    android:textAlignment="center"
                    android:textColor="@color/colorAccent"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/job"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="?android:selectableItemBackground"
                    android:fontFamily="sans-serif"
                    android:padding="20dp"
                    android:textColor="@color/colorAccent"
                    android:text="@string/unknown_job"
                    android:textAlignment="viewEnd"
                    android:textSize="20sp"/>

            </LinearLayout>

            <TextView
                android:id="@+id/open"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:selectableItemBackground"
                android:fontFamily="sans-serif"
                android:padding="16dp"
                android:text="@string/opening_time"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:selectableItemBackground"
                android:fontFamily="sans-serif"
                android:padding="16dp"
                android:text="@string/closing_time"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/edit"
                    android:text="@string/edit"
                    android:elevation="2dp"
                    android:layout_margin="2dp"
                    android:textColor="@color/colorAccent"
                    style="@style/Base.TextAppearance.AppCompat.Widget.Button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>

                <Button
                    android:id="@+id/statistic"
                    android:text="@string/timesheet"
                    android:elevation="2dp"
                    android:layout_margin="2dp"
                    android:textColor="@color/colorAccent"
                    style="@style/Base.TextAppearance.AppCompat.Widget.Button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>

            </LinearLayout>


        </LinearLayout>


    </LinearLayout>

</android.support.v7.widget.CardView>
