<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/request_card"
    style="@style/WhiteCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardCornerRadius="2dp"
    app:cardElevation="2dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/registered"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:src="@drawable/ic_receipt_black_24dp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_keyboard_arrow_right_black_24dp"/>

            <ImageView
                android:id="@+id/delivery"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:src="@drawable/ic_local_shipping_grey_24dp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_keyboard_arrow_right_black_24dp"/>

            <ImageView
                android:id="@+id/done"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:src="@drawable/ic_done_black_24dp"/>

        </LinearLayout>

        <EditText
            android:id="@+id/client"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/CardText"
            android:textSize="20sp"
            android:hint="@string/client"/>

        <EditText
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/date"
            style="@style/CardText"
            android:textSize="20sp"
            android:inputType="date|datetime"/>

        <EditText
            android:id="@+id/status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/CardText"
            android:textSize="20sp"
            android:hint="@string/status"/>

    </LinearLayout>

</android.support.v7.widget.CardView>